Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
           <h1>Fig Leaf</h1>
-          <h2>batch zip with password and generate thumbnails for photos and videos</h2>
+          <h2>Batch zip your photos and videos with passwords and thumbnails</h2>
         </header>
 
         <section id="downloads" class="clearfix">
