Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h1>
 <a name="to-simplify-the-browsing-of-the-encrypted-folder" class="anchor" href="#to-simplify-the-browsing-of-the-encrypted-folder"><span class="octicon octicon-link"></span></a>To simplify the browsing of the encrypted folder</h1>
 
-<p>it do the following:</p>
+<p>it does the following:</p>
 
 <ul>
 <li>preserves the inner folder and files structure,</li>
