--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <section id="main_content">
           <h1>
-<a name="figleaf" class="anchor" href="#figleaf"><span class="octicon octicon-link"></span></a>FigLeaf</h1>
+<a name="fig-leaf" class="anchor" href="#fig-leaf"><span class="octicon octicon-link"></span></a>Fig Leaf</h1>
 
 <p>is an utility that creates an encrypted copy of your folders. It synchronizes the content of the source folder(s) with the target folder and encrypts all files in the target folder at the same time. The goal of this program is to provide the basic protection of your photos and videos before uploading them to some cloud storage such as Dropbox, SkyDrive, etc.</p>
 
