Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
 <p>is an utility that creates an encrypted copy of your folders. It synchronizes the content of the source folder(s) with the target folder and encrypts all files in the target folder at the same time. The goal of this program is to provide the basic protection of your photos and videos before uploading them to some cloud storage such as Dropbox, SkyDrive, etc.</p>
 
+<p><img src="https://raw.githubusercontent.com/semenenkov/fig-leaf/master/web/Fig%20Leaf%200.2.0.png" alt="Fig Leaf screenshot"></p>
+
 <h1>
 <a name="to-simplify-the-browsing-of-the-encrypted-folder" class="anchor" href="#to-simplify-the-browsing-of-the-encrypted-folder"><span class="octicon octicon-link"></span></a>To simplify the browsing of the encrypted folder</h1>
 
